--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bidang.css" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/assets/images/favicon.png" />
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/1e6b6f692c.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
@@ -29,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>KOPSI | PUSPRESNAS 2021</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
